output/num_p5_25_124/foundry_validation/F-002_Permit-based_bridge_entrypoints_let_arbi/forge_stdout_attempt1.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:84:36:
   |
84 |     address public constant WBNB = 0xBB4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c;
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

